--- a/nextflow/nextflow.config
+++ b/nextflow/nextflow.config
@@ -1,5 +1,6 @@
 params.condaenv = '/projects/chuang-lab/jnh/miniconda3/envs/flower'
 params.data_path = "'/projects/chuang-lab/jnh/flower/data'"
+params.moviespath = "/projects/chuang-lab/jnh/flower/data/movies/"
 
 params.nbins=1000
 params.shellwidth=5
